--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -219,6 +219,16 @@
 </script>
 {% endif %}
 
+<!--<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?6ec0699627edc8510a4af73e3a91387e";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script> -->
+
 
 
 <!-- Side Catalog -->
