--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,15 +9,49 @@
     
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
-    <!-- Web App Manifest -->
-    <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json">
+    <!-- Favicon & Apple-touch-icon & Android chrome icon & Windows 8 and 10
+    See https://realfavicongenerator.net/ and https://www.favicon-generator.org/
+    and https://stackoverflow.com/questions/25952907/favicon-ico-vs-link-rel-shortcut-icon -->
 
     <!-- Favicon -->
+    <!-- "icon" vs. "shortcut icon" for favicon, see https://zh.wikipedia.org/wiki/Favicon -->
+    <!-- "shortcut icon" is for IE. -->
+    <!-- Officially not all browsers support Microsoft's icon format (although most seem ok with it in the current generation of browsers). -->
     <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
 
-    <!-- Safari Webpage Icon    by-BY -->
-    <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="{{ site.baseurl }}/img/favicon-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/img/favicon-96x96.png">
+
+    <!-- Safari Webpage Icon -->
+    <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/apple-icon.png">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/img/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/img/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/img/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl }}/img/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/img/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/img/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/img/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/img/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/apple-icon-180x180.png">
+
+    <link rel="mask-icon" href="{{ site.baseurl }}/img/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="apple-mobile-web-app-title" content="Chwyatt">
+
+    <!-- Web App Manifest for Android chrome -->
+    <!-- See https://developer.mozilla.org/zh-CN/docs/Web/Manifest -->
+    <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json">
     
+    <!-- Windows 8 and 10 -->
+    <!-- See msdn.microsoft.com/library/gg131029 -->
+    <meta name="application-name" content="Chwyatt">
+    <meta name="msapplication-config" content="{{ site.baseurl }}/browserconfig.xml">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="msapplication-TileImage" content="{{ site.baseurl }}/img/ms-icon-144x144.png">
+    <!-- <meta name="theme-color" content="#ffffff"> -->
+
     <!-- Canonical URL -->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
